# serializer version: 1
# name: test_rpc_blu_trv_button[button.trv_name_calibrate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.trv_name_calibrate',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TRV-Name Calibrate',
    'platform': 'shelly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'calibrate',
    'unique_id': 'f8:44:77:25:f0:dd_calibrate',
    'unit_of_measurement': None,
  })
# ---
# name: test_rpc_blu_trv_button[button.trv_name_calibrate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TRV-Name Calibrate',
    }),
    'context': <ANY>,
    'entity_id': 'button.trv_name_calibrate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_rpc_button[button.test_name_reboot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.test_name_reboot',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Test name Reboot',
    'platform': 'shelly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '123456789ABC_reboot',
    'unit_of_measurement': None,
  })
# ---
# name: test_rpc_button[button.test_name_reboot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': 'Test name Reboot',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_name_reboot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
